[package]
name = "extract-secret-file"
version = "0.1.0"
edition = "2021"

default-run = "extract-secret-file"

[features]
time-based = []
delete-my-self = []

[dependencies]
secrecy = "0.8.0"
aes = "0.8.4"
cbc = "0.1.2"
sudo = "0.6.0"
md5 = "0.7.0"
hex-simd = "0.8.0"

[build-dependencies]
aes = "0.8.4"
cbc = "0.1.2"

[profile.release]
lto = true
strip = true
opt-level = "s"
codegen-units = 1
panic = "abort"
