[package]
name = "extract-secret-file"
version = "0.1.0"
edition = "2021"

default-run = "extract-secret-file"

[features]
default = ["online-mode"]
online-mode = ["dep:serde", "dep:serde_json", "dep:reqwest"]
time-based = []

[dependencies]
secrecy = "0.8.0"
aes = "0.8.4"
cbc = "0.1.2"
sudo = "0.6.0"
md5 = "0.7.0"
hex-simd = "0.8.0"
colored = "2.1.0"

serde = { version = "1.0.204", features = ["derive"], optional = true }
reqwest = { version = "0.12.5", features = [
    "blocking",
    "json",
], optional = true }
serde_json = { version = "1.0.120", optional = true }

[build-dependencies]
aes = "0.8.4"
cbc = "0.1.2"

[profile.release]
lto = true
strip = true
opt-level = "s"
codegen-units = 1
panic = "abort"
